fixrd id16